Configuring button tag to toggle filter sidebar. Doesn't position correctly on mobile.

--- a/src/app/fight-summary-filters/fight-summary-filters.component.css
+++ b/src/app/fight-summary-filters/fight-summary-filters.component.css
@@ -1,3 +1,3 @@
-﻿h5 {
-  text-transform: capitalize;
+﻿.nav {
+  width: 240px;
 }
