--- a/src/app/fight-summary/fight-summary.component.css
+++ b/src/app/fight-summary/fight-summary.component.css
@@ -1,11 +1,20 @@
-﻿.sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
+﻿.sidebar {
+  z-index: 2;
+  padding: 20px;
 }
 
-.sidenav {
-  padding: 10px;
-  width: 320px;
+.sidebar-tag {
+  position: relative;
 }
+
+  .sidebar-tag div {
+    cursor: pointer;
+    z-index: 1;
+    position: absolute;
+    top: 20px;
+    left: -1px;
+    border: 1px solid grey;
+    border-radius: 0 10px 10px 0;
+    padding: 8px;
+    color: #2a2a2a;
+  }
