--- a/src/scss/_custom-variables.scss
+++ b/src/scss/_custom-variables.scss
@@ -1,4 +1,4 @@
-// Core Admin Variables
+﻿// Core Admin Variables
 
 $enable-sidebar-nav-rounded: false;
 
@@ -65,7 +65,7 @@ $navbar-disabled-color:             rgba(0,0,0,.15);
 
 // Sidebar
 
-$sidebar-width:                     200px;
+$sidebar-width:                     280px;
 $sidebar-padding:                   0;
 $sidebar-minimized-width:           50px;
 $sidebar-minimized-height:          $sidebar-minimized-width;
@@ -76,7 +76,7 @@ $sidebar-bg:                        $gray-dark;
 $sidebar-header-bg:                 rgba(0,0,0,.2);
 $sidebar-footer-bg:                 rgba(0,0,0,.2);
 $sidebar-borders:                   none;
-$mobile-sidebar-width:              220px;
+$mobile-sidebar-width:              280px;
 
 // Sidebar Navigation
 
